<resources>
    <string name="app_name">Silence</string>

    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>


    <string name="time_from">time from</string>
    <string name="time_until">time until</string>

    <string name="description">description</string>
    <string name="save">save</string>
    <string name="no_sound">no sound</string>
    <string name="vibration_allowed">vibration allowed"</string>
    <string name="ask_permission">Find Silence application and grant requested permission</string>
    <string name="every_day">every day</string>
    <string name="set_time_start_mode">Set time start mode</string>
    <string name="set_time_cancel_mode">Set time cancel mode</string>
    <string name="no_day_selected">No day selected</string>

    <string-array name="days_of_week">
        <item>@string/day_monday</item>
        <item>@string/day_tuesday</item>
        <item>@string/day_wednesday</item>
        <item>@string/day_thursday</item>
        <item>@string/day_friday</item>
        <item>@string/day_saturday</item>
        <item>@string/day_sunday</item>
    </string-array>
</resources>
